--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -5,6 +5,9 @@ html {
 body {
 	background: url('../images/apples_2560_o40.jpg');
 	background-size: 100% auto;
+	@include media-breakpoint-down(xs) {
+		background-size: auto 30%;
+	}
 	background-repeat: no-repeat;
 }
 
